tests/Frontend/inputs/invalid/invalid_6.qasm
OPENQASM 2.0;

qreg q[1];
h q[1];
